# AutoDBDoc

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: env.mdc
autodbdoc/: __init__.py  db_reader.py  doc_generator.py  logger_config.py  main.py  web_app.py
autodbdoc/templates/: __init__.py  index.html
